# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a simple high-level URL shortener written in Go.",
+        "description": "This is a high-level URL shortener written in Go.",
         "title": "URL Shortener API",
         "contact": {},
         "version": "1.0"
@@ -9,6 +9,81 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/analytics/top": {
+            "get": {
+                "description": "Returns top short codes with highest click counts",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "main"
+                ],
+                "summary": "Get top most clicked URLs",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Number of top results to return",
+                        "name": "limit",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "object",
+                                "additionalProperties": true
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/analytics/{shortCode}": {
+            "get": {
+                "description": "Returns daily click counts for a short URL",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "main"
+                ],
+                "summary": "Get daily click counts",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Short Code",
+                        "name": "shortCode",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/shorten": {
             "post": {
                 "description": "Takes a long URL and returns a shortened version",
@@ -17,6 +92,9 @@
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "main"
                 ],
                 "summary": "Shorten a URL",
                 "parameters": [
@@ -57,6 +135,9 @@
                 "description": "Redirects from a short URL code to the original URL",
                 "produces": [
                     "text/plain"
+                ],
+                "tags": [
+                    "main"
                 ],
                 "summary": "Redirect to original URL",
                 "parameters": [
